# AlphaEdge

./: .env.example  .gitignore  Dockerfile  LICENSE  LOCAL_SETUP.md  README.md  TEST_RESULTS.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
config/: otel-collector.yaml  prometheus.yml
frontend/: Dockerfile  app.py  requirements.txt
scripts/: ingest_sec.py
src/agents/: __init__.py  base_agent.py  critic_agent.py  fred_agent.py  openbb_agent.py  sec_rag_agent.py  synthesis_agent.py
src/api/: main.py
src/config/: __init__.py  constants.py  settings.py
src/data/: __init__.py  chunking.py  embeddings.py  sec_loader.py  vector_store.py
src/guardrails/: __init__.py  schemas.py  validator.py
src/models/: __init__.py  base.py  mlx_model.py  openai_model.py
src/orchestration/: __init__.py  complexity.py  decomposer.py  graph.py  nodes.py  state.py  task_executor.py
src/utils/: __init__.py  logging.py  telemetry.py
tests/: test_phoenix_tracing.py  test_sprint2.py  test_sprint3.py  test_sprint4.py  test_sprint5.py  test_sprint6.py  test_sprint7.py  test_sprint8.py
tests/integration/: test_graph.py
tests/unit/: test_agents.py  test_schemas.py
