[project]
name = "alphaedge"
version = "1.0.0"
description = "Multi-agent AI Market Research Assistant"
requires-python = ">=3.11"

dependencies = [
    # === ORCHESTRATION ===
    "langchain>=0.1.0",
    "langgraph>=0.0.40",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    
    # === API FRAMEWORK ===
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # === VECTOR DATABASE ===
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    
    # === DATA SOURCES ===
    "openbb>=4.1.0",
    "sec-edgar-downloader>=5.0.2",
    "fredapi>=0.5.1",
    
    # === LLM PROVIDERS ===
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.2",
    "boto3>=1.34.0",
    
    # === UTILITIES ===
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    
    # === OBSERVABILITY ===
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    
    # === FRONTEND ===
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]
mlx = [
    "mlx>=0.4.0",
    "mlx-lm>=0.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
